tests/bad/01-enum-empty.rs
use better_default_derive::Default;

#[derive(Debug, PartialEq, Eq, Default)]
enum Empty{}

fn main() {}
