tests/bad/01-enum-empty.stderr
error: #[derive(Default)] is not supported for empty enums
 --> tests/bad/01-enum-empty.rs:4:6
  |
4 | enum Empty{}
  |      ^^^^^
